// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders text 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "#7f91a8",
        "borderRadius": 2,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingHorizontal": 5,
        "paddingVertical": 2,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
        },
        undefined,
      ]
    }
  >
    <Translation
      passThrough="default badge"
    />
  </Text>
</View>
`;

exports[`renders text with color 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "#7f91a8",
        "borderRadius": 2,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingHorizontal": 5,
        "paddingVertical": 2,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
        },
        undefined,
      ]
    }
  >
    <Translation
      passThrough="badge with color"
    />
  </Text>
</View>
`;

exports[`renders very long texts 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "#7f91a8",
        "borderRadius": 2,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingHorizontal": 5,
        "paddingVertical": 2,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
        },
        undefined,
      ]
    }
  >
    <Translation
      passThrough="very very very very very long badge (adaptable width)"
    />
  </Text>
</View>
`;
